Bug 119252 - Fileopen: Table opens a width of 115.60 cm (since LibO6.1) in webview
Summary: Fileopen: Table opens a width of 115.60 cm (since LibO6.1) in webview
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Web-Layout
  Show dependency treegraph
 
Reported: 2018-08-13 14:02 UTC by Telesto
Modified: 2018-08-16 10:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (11.64 KB, application/vnd.oasis.opendocument.text)
2018-08-13 14:02 UTC, Telesto
Details
Bibisect log (2.91 KB, text/plain)
2018-08-13 14:03 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-08-13 14:02:27 UTC
Description:
Fileopen: Table opens a width of 115.60 cm (since LibO6.1). 

Steps to Reproduce:
1. Open the attached file
2. Table goes outside screen (115,60 cm) 

Actual Results:
Table doesn't fit on screen (did before)

Expected Results:
Should fit (it does fit in normal view) and in prior versions


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.2.0.0.alpha0+
Build ID: c0fdcece6b886912618deee9656cb2d169a9b999
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-08-12_00:35:45
Locale: en-US (nl_NL); Calc: CL
Comment 1 Telesto 2018-08-13 14:02:38 UTC
Created attachment 144150 [details]
Example file
Comment 2 Telesto 2018-08-13 14:03:35 UTC
Created attachment 144151 [details]
Bibisect log

Bisected to

author	Stephan Bergmann <sbergman@redhat.com>	2018-02-01 15:12:26 +0100
committer	Stephan Bergmann <sbergman@redhat.com>	2018-02-01 20:52:11 +0100
commit 4a61006255c67bb6f9ac99107093a424a9de441e (patch)
tree 6101cafcacff9c688ceb6d8c13d29880cd0a6b38
parent 5357ca82846ea7147ad61e9340f25647a5934eb0 (diff)
Remove < USHRT_MAX check that is presumably no longer needed
The check was like this ever since 84a3db80b4fd66c6854b3135b5f69b61fd828e62
"initial import" (and SwRootFrame::mnBrowseWidth---which the nWidth here is
ultimately assigned to---was also of type long back then).  But the only use
of SwRootFrame::mnBrowseWidth, in the call to SwRootFrame::GetBrowseWidth at

> long nWidth = GetUpper() ? static_cast<SwRootFrame*>(GetUpper())->GetBrowseWidth() : 0;

in SwPageFrame::MakeAll (sw/source/core/layout/calcmove.cxx), assigns it to a
long nWidth that doesn't appear to be used in a context where it needs to be
restricted to USHORT values (at least not any longer?), so assume that initial
check against USHRT_MAX-2000 is no longer needed.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4a61006255c67bb6f9ac99107093a424a9de441e
Comment 3 Dieter 2018-08-13 16:32:41 UTC
I confirm it with

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 0a1a4ffb4f87adff7fbbbc60202b6a0e42fedd0c
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-08-08_23:17:46
Locale: en-US (de_DE); Calc: CL
Comment 4 Xisco Faulí 2018-08-14 14:03:15 UTC
Adding Cc: to Stephan Bergmann
Comment 5 Commit Notification 2018-08-15 06:41:26 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d9c312d1917bc039bb0354c8c3f5c9dbbb758cf1

tdf#119252: Revert "Remove < USHRT_MAX check that is presumably no longer

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stephan Bergmann 2018-08-15 07:14:46 UTC
backport request of fix from commit 5 to libreoffice-6-1 towards LO 6.1.1 at <https://gerrit.libreoffice.org/#/c/59039/>
Comment 7 Telesto 2018-08-15 08:07:44 UTC
Thanks for fixing this!
Comment 8 Xisco Faulí 2018-08-16 09:43:12 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 1af7f19224f18e5025352339648db659575eae33
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 9 Xisco Faulí 2018-08-16 09:43:32 UTC
@Stephan Bergmann, thanks for the quick fix!
Comment 10 Commit Notification 2018-08-16 10:06:56 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ab8b8fdbb32ad4da5af521b1b982189786bcdcb4&h=libreoffice-6-1

tdf#119252: Revert "Remove < USHRT_MAX check that is presumably no longer

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.