Silence bogus -Werror,-Wsign-compare

...in some Android builds like <https://tinderbox.libreoffice.org/cgi-bin/
gunzip.cgi?tree=MASTER&brief-log=1534320601.32504>, where USHRT_MAX is wrongly
of type unsigned int.  (Cf. similar comits like
f164c68296b66d534ed2c9de6da4c01e328959d9 "Introduce dedicated
SwXMLTableContext::MAX_WIDTH, replacing USHRT_MAX".)

So this was the reason for 4a61006255c67bb6f9ac99107093a424a9de441e "Remove <
USHRT_MAX check that is presumably no longer needed" that now had to be reverted
again with d9c312d1917bc039bb0354c8c3f5c9dbbb758cf1 "tdf#119252: Revert 'Remove
< USHRT_MAX check that is presumably no longer".

Change-Id: I7ff4f6ab61adc2490bcab46ec5e5a65d9302141f